# Projet_Python

./: .gitignore  Nettoyage.py  README.md  pyproject.toml  requirements.txt
data/: Ligue_1.xlsx
outputs/: Ligue_1_clean.xlsx  dashboard_ligue1.xlsx
src/: data_cleaning.py  export_excel.py  export_excel_backup.py
src/projet_python/: __init__.py  data_cleaning.py  export_excel.py
