[project]
name = "projet-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ilyeselkhomsii", email = "ilyes.el-khomsi.auditeur@lecnam.net" }
]
requires-python = ">=3.13"
dependencies = [
    "openpyxl==3.1.3",
    "pandas>=3.0.3",
]

[project.scripts]
projet-python = "projet_python:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
